fix: toast z-index

--- a/src/styles/var.scss
+++ b/src/styles/var.scss
@@ -191,6 +191,7 @@ $tag-default-color: $gray-6;
 $tag-plain-background-color: $white;
 
 // Toast
+$toast-z-index: 1000;
 $toast-max-width: 70%;
 $toast-font-size: $font-size-md;
 $toast-text-color: $white;
